--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!-- Sections -->
     <div id="about" class="section">
         <h2>About</h2>
-        <p>I am a final-year Biomedical Engineering & Systems student (Al Shorouk Academy — expected 2026). I build MATLAB GUIs and Arduino prototypes for medical/IoT use-cases, and I have customer-facing experience and leadership through AIESEC.</p>
+        <p>I am a final-year Biomedical Engineering & Systems student (Al Shorouk Academy — expected 2026). I build MATLAB GUIs and Arduino prototypes for medical/IoT use-cases along with basic understading of netwroking, and I have customer-facing experience and leadership through AIESEC.</p>
         <p><a href="Remon_Sabry_CV.pdf" target="_blank">Download CV (PDF)</a></p>
     </div>
 
