--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
                 ICDL — English & Human Development
                 — <a href="assets/certifications/icdl-cert.png" target="_blank">View Certificate</a>
             </li>
+ <li>
+               Python
+                — <a href="assets/certifications/cpp-cert.png" target="_blank">View Certificate</a>
+            </li>
             <li>
                 English C1+
                 — <a href="assets/certifications/english-c1.png" target="_blank">View Certificate</a>
@@ -242,4 +246,5 @@
     </script>
 </body>
 </html>
+
 
