--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
                 ICDL — English & Human Development
                 — <a href="assets/certifications/icdl-cert.png" target="_blank">View Certificate</a>
             </li>
+<li>
+               Technology Innovation Commercialization Office (TICO)
+                — <a href="assets/certifications/icdl-cert.png" target="_blank">View Certificate</a>
+            </li>
  <li>
                Python
                 — <a href="assets/certifications/cpp-cert.png" target="_blank">View Certificate</a>
@@ -246,5 +250,6 @@
     </script>
 </body>
 </html>
+
 
 
