--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 
     <div id="projects" class="section">
         <h2>Projects</h2>
-        <ul>
-            <li><a href="#" target="_blank">ECG Signal Analysis (MATLAB GUI)</a></li>
-            <li><a href="#" target="_blank">Smart Patient Monitoring System (Arduino)</a></li>
-            <li><a href="#" target="_blank">Pharmacy Database (MySQL)</a></li>
-            <li><a href="#" target="_blank">C/C++: Calculator & Eye Booking System (A+)</a></li>
-            <li><a href="#" target="_blank">Cisco and Networking topology </a></li>
-        </ul>
+         <ul>
+        <li><a href="assets/projects/ecg-analysis.zip" target="_blank">ECG Signal Analysis (MATLAB GUI)</a></li>
+        <li><a href="assets/projects/smart-monitoring.zip" target="_blank">Smart Patient Monitoring System (Arduino)</a></li>
+        <li><a href="assets/projects/pharmacy-database.zip" target="_blank">Pharmacy Database (MySQL)</a></li>
+        <li><a href="assets/projects/calculator-eye.zip" target="_blank">C/C++: Calculator & Eye Booking System</a></li>
+        <li><a href="assets/projects/networking-topology.zip" target="_blank">Cisco and Networking Topology</a></li>
+    </ul>
     </div>
 
     <div id="education" class="section">
@@ -196,36 +196,14 @@
     <div id="certifications" class="section">
         <h2>Certifications</h2>
         <ul>
-            <li>
-                C & C++ (Beginner + Advanced)
-                — <a href="assets/certifications/cpp-cert.png" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                Arduino Development
-                — <a href="assets/certifications/arduino-cert.png" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                MySQL (two courses)
-                — <a href="assets/certifications/mysql-cert1.png" target="_blank">Course 1</a>,
-                <a href="assets/certifications/mysql-cert2.png" target="_blank">Course 2</a>
-            </li>
-            <li>
-                ICDL — English & Human Development
-                — <a href="assets/certifications/icdl-cert.png" target="_blank">View Certificate</a>
-            </li>
-<li>
-               Technology Innovation Commercialization Office (TICO)
-                — <a href="assets/certifications/icdl-cert.png" target="_blank">View Certificate</a>
-            </li>
- <li>
-               Python
-                — <a href="assets/certifications/cpp-cert.png" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                English C1+
-                — <a href="assets/certifications/english-c1.png" target="_blank">View Certificate</a>
-            </li>
-        </ul>
+        <li>C & C++ (Beginner + Advanced) — <a href="assets/certifications/cpp-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>Arduino Development — <a href="assets/certifications/arduino-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>MySQL — <a href="assets/certifications/mysql-cert1.pdf" target="_blank">Course 1</a>, <a href="assets/certifications/mysql-cert2.pdf" target="_blank">Course 2</a></li>
+        <li>ICDL — English & Human Development — <a href="assets/certifications/icdl-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>Python — <a href="assets/certifications/python-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>English C1+ — <a href="assets/certifications/english-c1.pdf" target="_blank">View Certificate</a></li>
+<li> Technology Innovation Commercialization Office (TICO)— <a href="assets/certifications/tico-cert.pdf" target="_blank">View Certificate</a></li>
+    </ul>
     </div>
 
 
@@ -250,6 +228,7 @@
     </script>
 </body>
 </html>
+
 
 
 
