--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!-- Sections -->
     <div id="about" class="section">
         <h2>About</h2>
-        <p>I am a final-year Biomedical Engineering & Systems student (Al Shorouk Academy — expected 2026). I build MATLAB GUIs and Arduino prototypes for medical/IoT use-cases along with basic understading of netwroking, and I have customer-facing experience and leadership through AIESEC.</p>
+        <p>I am a final-year Biomedical Engineering & Systems student (Al Shorouk Academy — expected 2026). I build MATLAB GUIs and Arduino prototypes for medical/IoT use-cases along with basic understadning of netwroking, and I have customer-facing experience and leadership through AIESEC.</p>
         <p><a href="Remon_Sabry_CV.pdf" target="_blank">Download CV (PDF)</a></p>
     </div>
 
@@ -196,13 +196,13 @@
     <div id="certifications" class="section">
         <h2>Certifications</h2>
         <ul>
-        <li>C & C++ (Beginner + Advanced) — <a href="assets/certifications/cpp-cert.pdf" target="_blank">View Certificate</a></li>
-        <li>Arduino Development — <a href="assets/certifications/arduino-cert.pdf" target="_blank">View Certificate</a></li>
-        <li>MySQL — <a href="assets/certifications/mysql-cert1.pdf" target="_blank">Course 1</a>, <a href="assets/certifications/mysql-cert2.pdf" target="_blank">Course 2</a></li>
-        <li>ICDL — English & Human Development — <a href="assets/certifications/icdl-cert.pdf" target="_blank">View Certificate</a></li>
-        <li> Technology Innovation Commercialization Office (TICO)— <a href="assets/certifications/tico-cert.pdf" target="_blank">View Certificate</a></li>        
-        <li>Python — <a href="assets/certifications/python-cert.pdf" target="_blank">View Certificate</a></li>
-        <li>English C1+ — <a href="assets/certifications/english-c1.pdf" target="_blank">View Certificate</a></li>
+        <li>C & C++ (Beginner + Advanced) — <a href="assets/projects/cpp-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>Arduino Development — <a href="assets/projects/arduino-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>MySQL — <a href="assets/projects/mysql-cert1.pdf" target="_blank">Course 1</a>, <a href="assets/certifications/mysql-cert2.pdf" target="_blank">Course 2</a></li>
+        <li>ICDL — English & Human Development — <a href="assets/projects/icdl-cert.pdf" target="_blank">View Certificate</a></li>
+        <li> Technology Innovation Commercialization Office (TICO)— <a href="assets/projects/tico-cert.pdf" target="_blank">View Certificate</a></li>        
+        <li>Python — <a href="assets/projects/python-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>English C1+ — <a href="assets/projects/english-c1.pdf" target="_blank">View Certificate</a></li>
 
     </ul>
     </div>
@@ -229,6 +229,7 @@
     </script>
 </body>
 </html>
+
 
 
 
