--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
     <div id="projects" class="section">
         <h2>Projects</h2>
          <ul>
-        <li><a href="assets/projects/ecg-analysis.zip" target="_blank">ECG Signal Analysis (MATLAB GUI)</a></li>
-        <li><a href="assets/projects/smart-monitoring.zip" target="_blank">Smart Patient Monitoring System (Arduino)</a></li>
-        <li><a href="assets/projects/pharmacy-database.zip" target="_blank">Pharmacy Database (MySQL)</a></li>
-        <li><a href="assets/projects/calculator-eye.zip" target="_blank">C/C++: Calculator & Eye Booking System</a></li>
-        <li><a href="assets/projects/networking-topology.zip" target="_blank">Cisco and Networking Topology</a></li>
+        <li><a href="ecg-analysis.zip" target="_blank">ECG Signal Analysis (MATLAB GUI)</a></li>
+        <li><a href="smart-monitoring.zip" target="_blank">Smart Patient Monitoring System (Arduino)</a></li>
+        <li><a href="pharmacy-database.zip" target="_blank">Pharmacy Database (MySQL)</a></li>
+        <li><a href="calculator-eye.zip" target="_blank">C/C++: Calculator & Eye Booking System</a></li>
+        <li><a href="networking-topology.zip" target="_blank">Cisco and Networking Topology</a></li>
     </ul>
     </div>
 
@@ -195,15 +195,14 @@
 
     <div id="certifications" class="section">
         <h2>Certifications</h2>
-        <ul>
-        <li>C & C++ (Beginner + Advanced) — <a href="assets/projects/cpp-cert.pdf" target="_blank">View Certificate</a></li>
-        <li>Arduino Development — <a href="assets/projects/arduino-cert.pdf" target="_blank">View Certificate</a></li>
-        <li>MySQL — <a href="assets/projects/mysql-cert1.pdf" target="_blank">Course 1</a>, <a href="assets/certifications/mysql-cert2.pdf" target="_blank">Course 2</a></li>
-        <li>ICDL — English & Human Development — <a href="assets/projects/icdl-cert.pdf" target="_blank">View Certificate</a></li>
-        <li> Technology Innovation Commercialization Office (TICO)— <a href="assets/projects/tico-cert.pdf" target="_blank">View Certificate</a></li>        
-        <li>Python — <a href="assets/projects/python-cert.pdf" target="_blank">View Certificate</a></li>
-        <li>English C1+ — <a href="assets/projects/english-c1.pdf" target="_blank">View Certificate</a></li>
-
+         <ul>
+        <li>C & C++ (Beginner + Advanced) — <a href="cpp-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>Arduino Development — <a href="arduino-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>MySQL — <a href="mysql-cert1.pdf" target="_blank">Course 1</a>, <a href="mysql-cert2.pdf" target="_blank">Course 2</a></li>
+        <li>ICDL — <a href="icdl-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>Technology Innovation Commercialization Office (TICO) — <a href="tico-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>Python — <a href="python-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>English C1+ — <a href="english-c1.pdf" target="_blank">View Certificate</a></li>
     </ul>
     </div>
 
@@ -229,6 +228,7 @@
     </script>
 </body>
 </html>
+
 
 
 
