--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div id="certifications" class="section">
         <h2>Certifications</h2>
          <ul>
-        <li>C & C++ (Beginner + Advanced) — <a href="cpp-cert.pdf" target="_blank">View Certificate</a></li>
+        <li>C & C++ (Beginner + Advanced) — <a href="cpp-cert..pdf" target="_blank">View Certificate</a></li>
         <li>Arduino Development — <a href="arduino-cert.pdf" target="_blank">View Certificate</a></li>
         <li>MySQL — <a href="mysql-cert1.pdf" target="_blank">Course 1</a>, <a href="mysql-cert2.pdf" target="_blank">Course 2</a></li>
         <li>ICDL — <a href="icdl-cert.pdf" target="_blank">View Certificate</a></li>
@@ -228,6 +228,7 @@
     </script>
 </body>
 </html>
+
 
 
 
